fix: resolve market data issue